base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arbetsprov-app
  labels:
    app: arbetsprov-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: arbetsprov-app
  template:
    metadata:
      labels:
        app: arbetsprov-app
    spec:
      containers:
      - name: arbetsprov-app
        image: arbetsprov.registry.se/arbetsprov-app:0.0.1
        resources:
          limits:
            memory: "50M"
            cpu: "50m"
          request:
            memory: "20M"
            cpu: "20m"
        ports:
        - containerPort: 8080
